# Titan

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  LICENSE-MIT  README.md  SetupInstructions.md  VERSIONING.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  fetch_block.sh
.github/workflows/: docker-publish.yml
client/: Cargo.toml  README.md
client/src/: error.rs  http_client.rs  lib.rs  tcp_client.rs  tcp_client_blocking.rs
client/src/http/: client_async_impl.rs  client_sync_impl.rs  client_trait.rs  mod.rs
client/src/tcp/: connection_status.rs  mod.rs  reconnection.rs  tcp_client.rs  tcp_client_blocking.rs
crates/alkanes-indexer/: Cargo.toml
crates/alkanes-indexer/src/: balance_sheet.rs  block.rs  etl.rs  index_pointer.rs  indexer.rs  init.rs  lib.rs  message.rs  network.rs  protorune_view.rs  store.rs  tables.rs  trace.rs  traits.rs  unwrap.rs  utils.rs  view.rs
crates/alkanes-indexer/src/precompiled/: alkanes_std_auth_token_build.rs  alkanes_std_beacon_proxy_build.rs  alkanes_std_genesis_alkane_build.rs  alkanes_std_genesis_alkane_luckycoin_build.rs  alkanes_std_genesis_alkane_mainnet_build.rs  alkanes_std_genesis_alkane_regtest_build.rs  alkanes_std_genesis_alkane_upgraded_mainnet_build.rs  alkanes_std_genesis_alkane_upgraded_regtest_build.rs  alkanes_std_owned_token_build.rs  alkanes_std_proxy_build.rs  alkanes_std_upgradeable_beacon_build.rs  alkanes_std_upgradeable_build.rs  fr_btc.wasm  fr_btc_build.rs  fr_sigil.wasm  fr_sigil_build.rs  free_mint_build.rs  mod.rs
crates/alkanes-indexer/src/tests/static/: 849236.txt
crates/alkanes-indexer/src/vm/: constants.rs  exports.rs  extcall.rs  fuel.rs  host_functions.rs  instance.rs  runtime.rs  utils.rs
crates/alkanes-support/: Cargo.toml
crates/alkanes-support/proto/: alkanes.proto  protorune.proto
crates/alkanes-support/src/: constants.rs  context.rs  envelope.rs  id.rs  lib.rs  parcel.rs  storage.rs  utils.rs
crates/alkanes-support/src/proto/: alkanes.rs
crates/alkanes-support/src/trace/: block.rs  mod.rs  types.rs
crates/client/: Cargo.toml
crates/client/src/: error.rs  lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs  options.rs
crates/indexer/src/api/: alkanes.rs  api.rs  mod.rs  query.rs
crates/indexer/src/api/content/: mod.rs
crates/indexer/src/bitcoin_rpc/: result.rs
crates/indexer/src/db/: entry.rs  error.rs  mod.rs  rocks.rs  util.rs  wrapper.rs
crates/indexer/src/index/: index.rs  metrics.rs  mod.rs  settings.rs  store.rs
crates/indexer/src/index/inscription/: inscription_parser.rs
crates/indexer/src/index/updater/: events.rs  index_updater.rs  mod.rs  store_lock.rs  transaction_update.rs
crates/indexer/src/index/updater/cache/: block_cache.rs  mempool_cache.rs  mod.rs
crates/indexer/src/index/updater/fetcher/: mempool_fetcher.rs  mod.rs
crates/indexer/src/index/updater/rollback/: mod.rs  rollback.rs
crates/indexer/src/index/updater/transaction/: mod.rs  test_helpers.rs  transaction_parser.rs
crates/indexer/src/index/zmq/: listener.rs  manager.rs  mod.rs
crates/indexer/src/models/: batch_delete.rs  batch_rollback.rs  batch_update.rs  inscription.rs  mod.rs  pending_etch.rs  protorune.rs  rune.rs  transaction_state_change.rs
crates/indexer/src/protorune/: context.rs
crates/indexer/src/server/: error.rs  server.rs
crates/indexer/src/subscription/: mod.rs  spawn.rs  tcp_subscription.rs
crates/indexer/src/subscription/webhook/: cleanup.rs  mod.rs  process.rs  store.rs
crates/indexer/src/util/: into_usize.rs  mod.rs
crates/protorune-support/: Cargo.toml
crates/protorune-support/proto/: protorune.proto
crates/protorune-support/src/: address.rs  balance_sheet.rs  byte_view.rs  lib.rs  message.rs  network.rs  protostone.rs  rune_transfer.rs  utils.rs
crates/protorune-support/src/proto/: protorune.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: mempool_entry.rs  outpoint.rs  rune.rs  serde_str.rs  stats.rs  subscription.rs  transaction.rs  tx_out.rs  txid.rs
indexer/: Cargo.toml
indexer/src/: main.rs  options.rs
indexer/src/api/: api.rs  mod.rs  query.rs
indexer/src/bitcoin_rpc/: mod.rs  pool.rs  provider.rs  result.rs
indexer/src/db/: entry.rs  error.rs  helpers.rs  mapper.rs  mod.rs  rocks.rs  util.rs
indexer/src/index/: bitcoin_rpc.rs  chain.rs  index.rs  metrics.rs  mod.rs  settings.rs  store.rs
indexer/src/models/: batch_delete.rs  batch_rollback.rs  batch_update.rs  block.rs  mod.rs  rune.rs  script_pubkey.rs  transaction.rs  transaction_state_change.rs
indexer/src/server/: deserialize_from_str.rs  error.rs  server.rs  server_config.rs
indexer/src/subscription/: dispatcher.rs  spawn.rs  tcp_subscription.rs
scripts/: deploy.sh  version-bump.sh
sdk/: Cargo.toml
sdk/src/: block.rs  lib.rs  pagination.rs  rune.rs  subscription.rs  transaction.rs
src/: main.rs  options.rs
src/api/: api.rs  mod.rs  re.rs  rune.rs  transaction.rs
src/db/: entry.rs  error.rs  helpers.rs  mapper.rs  mod.rs  rocks.rs  util.rs  wrapper.rs
src/index/: event.rs  index.rs  metrics.rs  mod.rs  settings.rs  store.rs  zmq.rs
src/models/: address.rs  batch_delete.rs  batch_update.rs  block.rs  event.rs  inscription.rs  inscription_id.rs  lot.rs  media.rs  mod.rs  pending_etch.rs  rune.rs  script_pubkey.rs  subscription.rs  transaction.rs  transaction_state_change.rs
src/server/: error.rs  mod.rs  server.rs  server_config.rs
src/subscription/: dispatcher.rs  manager.rs  mod.rs  store.rs
src/util/: into_usize.rs
tests/: package-lock.json  package.json  tsconfig.json
tests/src/: verify_broadcast.ts  verify_indexer.ts
ts-sdk/: .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
ts-sdk/src/: http-client.ts  index.ts  tcp-client.ts  types.ts
ts-sdk/tests/: verify_indexer.js  verify_indexer.ts
types/: Cargo.toml
types/src/: address.rs  block.rs  event.rs  inscription_id.rs  lib.rs  mempool_entry.rs  outpoint.rs  pagination.rs  query.rs  rune.rs  stats.rs  subscription.rs  transaction.rs  tx_in.rs  tx_out.rs  txid.rs
(+56 files in other folders)
