[workspace]
resolver = "2"

members = ["indexer", "types", "client"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
# workspace
titan-types = { path = "types" }

async-trait = "0.1.86"
axum = "0.8.1"
axum-server = "0.7.1"
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
borsh = { version = "1.5.3", features = ["derive"] }
brotli = "7.0.0"
clap = { version = "4.5.23", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
hex = "0.4.3"
http = "1.2.0"
indicatif = "0.17.9"
lazy_static = "1.5.0"
ordinals = "0.0.14"
prometheus = "0.13.4"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
rocksdb = "0.22.0"
serde = "1.0.216"
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.8"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-br", "compression-gzip", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.1", features = ["borsh", "serde", "v4"] }
async_zmq = "0.4.0"
rand = "0.9.0"
num_cpus = "1.16.0"
clru = "0.6.2"
crossbeam-channel = "0.5.15"
rustc-hash = "2.1.1"