[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
tcp_client = []

[dependencies]
types = { workspace = true }

bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }