[package]
name = "titan-types"
version = "0.1.10"
edition = "2021"

authors = ["Marcos <mcolladomcm@email.com>"]
license = "MIT OR Apache-2.0"
description = "Types for Titan bitcoin and runes indexer"
repository = "https://github.com/SaturnBTC/titan"
readme = "README.md"
categories = []
keywords = ["bitcoin", "indexer", "runes", "rust"]

[dependencies]
bitcoin = { workspace = true }
borsh = { workspace = true }
brotli = { workspace = true }
http = { workspace = true }
ordinals = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
