[package]
name = "alkanes-support"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
protorune-support = { workspace = true }
metashrew-support = { workspace = true }
bitcoin = { workspace = true }
serde = "1.0.213"
flate2 = "1.0.34"
protobuf = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protobuf-codegen = "3.4.0"
flate2 = "1.0.34"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
hex = { workspace = true }