[package]
name = "titan"
version = "0.1.0"
edition = "2021"

[dependencies]
titan-types = { workspace = true }
alkanes-support = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
borsh = { workspace = true }
brotli = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
indicatif = { workspace = true }
lazy_static = { workspace = true }
ordinals = { workspace = true }
prometheus = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async_zmq = { workspace = true }
threadpool = "1.8.1"
chrono = "0.4.39"
clru = { workspace = true }
crossbeam-channel = { workspace = true }
rustc-hash = { workspace = true }
