[package]
name = "protorune-support"
version.workspace = true
edition = "2021"
description.workspace = true
license.workspace = true
repository.workspace = true
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { workspace = true }
serde = { workspace = true }
ordinals = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
protobuf = { workspace = true }
bech32 = "0.11.0"
borsh = { workspace = true }

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
